--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "@babel/preset-react": "^7.0.0",
     "axios": "^0.19.0",
     "babel-loader": "^8.0.6",
-    "lodash": "^4.17.11",
+    "lodash": "^4.17.15",
     "node-sass": "^4.12.0",
     "react": "^16.8.6",
     "react-dom": "^16.8.6",
@@ -15,6 +15,7 @@
     "react-redux": "^7.0.3",
     "react-router-dom": "^5.0.1",
     "redux": "^4.0.1",
+    "redux-thunk": "^2.3.0",
     "save": "^2.4.0",
     "webpack": "^4.33.0",
     "webpack-cli": "^3.3.2"
