--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "react-logger": "^1.1.0",
     "react-redux": "^7.0.3",
     "react-router-dom": "^5.0.1",
+    "react-slick": "^0.25.2",
     "redux": "^4.0.1",
     "redux-thunk": "^2.3.0",
     "save": "^2.4.0",
